[PlayStation] Fix build after 254379@main https://bugs.webkit.org/show_bug.cgi?id=245096

Unreviewed build fix.

Provide definitions of `Encoder` and `Decoder`.

* Source/WebKit/Platform/IPC/unix/AttachmentUnix.cpp:

Canonical link: https://commits.webkit.org/254405@main